# fastapi-jwt-oauth

./: .editorconfig  .env.example  .gitignore  README.md  db_example.py  pyproject.toml
authorization/: dependencies.py  main.py  schemas.py  utils.py
authorization/auth/: README.md  __init__.py  config.py  exceptions.py  router.py  utils.py
authorization/users/: __init__.py  router.py  schemas.py  services.py  utils.py
